--- a/style.css
+++ b/style.css
@@ -10,6 +10,26 @@
             }    
 
 */
+/* CSS Reset */
+*{
+    margin: 0;
+    border: 0;
+    padding: 0;
+}
+
+/* Importação (Google Fonts) */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@100;300;400;500;700&display=swap');
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+}
+
+/* Layout */
+.Container {
+    margin: 0 auto;
+    background-color: #7f0;
+}
 
 /* Smartphone Portrait >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  */
 
@@ -18,13 +38,20 @@
     body{
     background-color: #0ff;
     }
+    /* Layout */
+    .Container {
+        max-width: 540px;
+    }
 }
-
 
 /* Tablet Portrait >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  */
 @media (min-width: 768px){
     body{
         background-color: #ff0;
+    }
+    /* Layout */
+    .Container {
+        max-width: 720px;
     }
 }
 
@@ -33,6 +60,10 @@
     body{
         background-color: #f60;
     }
+    /* Layout */
+    .Container {
+        max-width: 960px;
+    }
 }
 
 /* PC >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  */
@@ -40,6 +71,9 @@
     body{
         background-color: #ff0000;
     }
-
+    /* Layout */    
+    .Container {
+        max-width: 1140px;
+    }
 }
 
