--- a/style.css
+++ b/style.css
@@ -36,6 +36,11 @@ body {
     justify-content: space-between;
 }
 
+.Flex2 {
+    display: flex;
+    align-items: center;
+}
+
 .Botao {    
     text-decoration: none;
     color: #fff;
@@ -104,6 +109,7 @@ main {
     height: 75vh;
     background: url(img/banner.jpg);
     background-size: cover;
+    background-position: center;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -117,6 +123,33 @@ main h1 {
 main h2 {
     font-size: 1em;
     margin: 20px 0px 50px 0px;
+}
+
+/* Sobre */
+#sobre {
+    padding: 50px 0px;
+    background: url(img/background.png);
+    background-size: cover;
+    background-position: center;
+}
+
+#destaqueSobre {
+    display: none;
+}
+#textoSobre {
+    color: #fff;
+    padding: 0px 10px;
+}
+#textoSobre h2 {
+    margin-bottom: 10px;
+}
+
+.topicosSobre {
+    margin-top: 20px;
+}
+
+.topicosSobre img {
+    margin-right: 10px;
 }
 
 /* Smartphone Landscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  */
@@ -203,6 +236,20 @@ nav ul li a {
 
 nav ul li a:hover{
     color: #c00000;
+}
+
+/* Sobre */
+#sobre {
+    background-attachment: fixed;
+}
+
+#destaqueSobre {
+    display: inline;
+}
+
+#destaqueSobre img {
+    border-radius: 50%;
+    margin-right: 50px;
 }
 
 }
